# flowsome

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  data.parquet  pyproject.toml  tox.ini
.github/workflows/: publish.yaml  test.yaml
flowsome/: client.py  decorators.py  exc.py  log.py  main.py  mixins.py  operators.py  pipeline.py  polars_backend.py  readers.py  tasks.py  transformations.py  utils.py  writers.py
flowsome/configuration/: config.py  sink.py  source.py
flowsome/readers/: base.py  filereader.py
polarflow/: main.py  pipeline.py  transformers.py  yaml_parser.py
resources/yaml/advanced/: example.yaml  filters.yaml
resources/yaml/basic/: parquet_to_csv.yaml
tests/: test_client.py  test_main.py  test_pipeline.py
tests/data/: output.csv
yaml_examples/basic/: csv_to_parquet.yaml
