[tool.poetry]
name = "flowsome"
version = "0.1.0"
description = "Minimal framework for building and executing data workflows on a single machine"
authors = ["jp <plutakuba@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JakubPluta/flowsome/"
repository = "https://github.com/JakubPluta/flowsome/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.15"
pyyaml = "^6.0.1"
deltalake = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
tox = "^4.14.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
